# avs_labs

./: README.md
course_work/: CMakeLists.txt
course_work/Tests/: TestClass.h  test.cpp
course_work/src/: Cpu.h  Executor.h  RegisterFile.h  main.cpp
labs/lab1/: lab1.sln
labs/lab1/Debug/: lab1.ilk
labs/lab1/lab1/: lab1.cpp  lab1.vcxproj  lab1.vcxproj.filters
labs/lab1/lab1/Debug/: vc142.idb
labs/lab1/lab1/Debug/lab1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  lab1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
labs/lab2/: lab2.sln
labs/lab2/Debug/: lab2.ilk
labs/lab2/lab2/: DynamicQueue.h  FixedSizeQueue.h  Part2.h  SafeQueue.h  lab2.cpp  lab2.vcxproj  lab2.vcxproj.filters
labs/lab2/lab2/Debug/: lab2.exe.recipe  vc142.idb
labs/lab2/lab2/Debug/lab2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  lab2.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
labs/lab3/: lab3.sln
labs/lab3/Debug/: lab3.ilk
labs/lab3/Release/: lab3.iobj  lab3.ipdb
labs/lab3/lab3/: lab3.cpp  lab3.vcxproj
labs/lab3/lab3/Debug/: lab3.exe.recipe  vc142.idb
labs/lab3/lab3/Debug/lab3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  lab3.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
labs/lab3/lab3/Release/: lab3.exe.recipe
labs/lab3/lab3/Release/lab3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  lab3.lastbuildstate  lab3.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
